crates/strider-analyze/tests/snapshots/v3__mips64be__control__early_return.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v6" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "v6" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "9" [label="const 0xffffffffffffffff:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "10" -> "7" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "10" [label="const 0x7:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "11" -> "7" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "12" -> "7" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "12" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="init\nf0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "13" -> "v6" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v14" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "13" -> "v14" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "15" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "16" -> "13" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "17" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v18" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "17" -> "v18" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v19" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "17" -> "v19" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "v14" -> "17" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "20" -> "17" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "15" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v19" -> "15" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v2" -> "15" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "21" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v18" -> "21" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "22" -> "21" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "23" -> "21" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x7:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "11" -> "21" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "12" -> "21" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "22" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "24" -> "22" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "24" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "25" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "27" -> "25" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "27" [label="φ v0", shape=house, fillcolor="#163030"];
  "15" -> "27" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "22" -> "27" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "28" -> "27" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "20" [label="Equal\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "22" -> "20" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "20" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x7:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "16" [label="Equal\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "30" -> "16" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "16" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="init\na0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="Sless\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "31" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "30" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
}
