crates/strider-analyze/tests/snapshots/v3__mips64be__control__max_val.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "6" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "9" -> "6" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "10" -> "6" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "11" -> "6" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "11" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="init\nf0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="ZeroExtend\nu8 → u64", shape=box, fillcolor="#2d2d2d"];
  "12" -> "9" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "12" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "13" -> "12" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "13" [label="Sless\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "14" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "15" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "15" [label="arg[1] ← a1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="arg[0] ← a0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="φ v0", shape=house, fillcolor="#163030"];
  "5" -> "8" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "14" -> "8" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "15" -> "8" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "7" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="Equal\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "9" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "16" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
}
