crates/strider-analyze/tests/snapshots/v3__mips64be__control__nested_loops.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "10" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="init\nf0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="init\nv1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v12" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v12" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v2" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "13" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v14" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "13" -> "v14" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v15" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "13" -> "v15" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "11" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "16" -> "13" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "17" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v15" -> "17" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v18" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "v18" -> "17" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "19" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v20" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "19" -> "v20" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "19" -> "v12" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "17" -> "19" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "21" -> "19" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "22" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v20" -> "22" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" -> "22" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "24" -> "22" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "9" -> "22" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "10" -> "22" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "24" [label="φ v1", shape=house, fillcolor="#163030"];
  "17" -> "24" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "25" -> "24" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "26" -> "24" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "26" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "27" -> "26" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "27" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "28" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "28" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "30" -> "28" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "30" [label="φ v1", shape=house, fillcolor="#163030"];
  "31" -> "30" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "26" -> "30" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "32" -> "30" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "31" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v33" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v33" -> "31" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v14" -> "31" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "34" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "34" -> "v18" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "34" -> "v33" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "31" -> "34" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "35" -> "34" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "35" [label="Equal\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "36" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "36" [label="init\na1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "25" [label="φ v1", shape=house, fillcolor="#163030"];
  "11" -> "25" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "24" -> "25" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "8" -> "25" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "23" [label="φ v0", shape=house, fillcolor="#163030"];
  "17" -> "23" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "37" -> "23" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "38" -> "23" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "38" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "39" -> "38" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "39" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "40" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "41" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "42" -> "41" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "42" [label="φ v0", shape=house, fillcolor="#163030"];
  "31" -> "42" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "38" -> "42" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "37" -> "42" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "37" [label="φ v0", shape=house, fillcolor="#163030"];
  "11" -> "37" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "23" -> "37" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "43" -> "37" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "43" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "40" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "44" -> "40" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "44" [label="φ a2", shape=house, fillcolor="#163030"];
  "31" -> "44" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "45" -> "44" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "46" -> "44" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "46" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "45" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "47" -> "45" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "47" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "40" -> "47" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "48" -> "47" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "49" -> "48" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "49" [label="φ t0", shape=house, fillcolor="#163030"];
  "11" -> "49" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "50" -> "49" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "51" -> "49" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "50" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "52" -> "50" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "52" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "53" -> "52" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "54" -> "52" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "54" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "53" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "49" -> "53" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "21" [label="Equal\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "55" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "50" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="init\na0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "16" [label="Sless\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "56" -> "16" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "56" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "36" -> "16" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "4" [label="Sless\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "57" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "55" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
}
